--- a/src/markdown/blog/pre-and-post-money-option-pools.mdx
+++ b/src/markdown/blog/pre-and-post-money-option-pools.mdx
@@ -2,7 +2,7 @@
 date: "2019-02-25"
 title: "The basics of pre- and post-money option pools"
 description: "If you’ve never understood what’s a pre- and post-money option pool (aka. the option pool shuffle), here’s your chance."
-featuredImage: pre-and-post-money-option-pools.png
+coverImage: pre-and-post-money-option-pools.png
 images:
   - pre-and-post-money-option-pools.png
 ---
