--- a/src/markdown/blog/verifying-documents-on-the-blockchain.mdx
+++ b/src/markdown/blog/verifying-documents-on-the-blockchain.mdx
@@ -2,7 +2,7 @@
 date: "2018-09-24"
 title: "Verifying documents on the Bitcoin blockchain"
 description: "Since the introduction of our blockchain notary, every document uploaded to our platform is certified and stamped on the Bitcoin blockchain."
-featuredImage: notary/verified-timestamp.png
+coverImage: notary/verified-timestamp.png
 images:
   - notary/attestation-details.png
   - notary/sha3.png
