--- a/src/markdown/jobs/software-engineer.mdx
+++ b/src/markdown/jobs/software-engineer.mdx
@@ -1,8 +1,7 @@
 ---
-date: "2018-12-28"
 title: "Software Engineer"
 description: "Ledgy is looking for a software engineer to grow it’s team. Join us to work on React, Node.js, Flow, and Meteor."
-thumbnailUrl: "/img/code.png"
+coverImage: code.png
 ---
 
 We are Ledgy, a SaaS startup from Zurich, looking for a software engineer to grow our team.
