--- a/src/markdown/blog/csv-export.mdx
+++ b/src/markdown/blog/csv-export.mdx
@@ -2,7 +2,7 @@
 date: "2018-07-31"
 title: "CSV export"
 description: "Ledgy lets you export all your data as CSV files. You might be thinking “Well great, but I hate all the formatting problems when opening CSV in Excel or Google Sheets”. Don’t worry we’ve thought about this and here’s a step-by-step guide to import CSV with all special characters and numbers well-formatted."
-featuredImage: csv-export/excel.png
+coverImage: csv-export/excel.png
 images:
   - csv-export/excel.png
   - csv-export/google-import.png
