--- a/src/markdown/blog/blockchain-notary.mdx
+++ b/src/markdown/blog/blockchain-notary.mdx
@@ -2,6 +2,7 @@
 date: "2018-09-18"
 title: "The Ledgy Blockchain Notary"
 description: "At Ledgy.com we’re building a new way of managing the cap table and equity of private companies in the cloud. What differentiates our approach from others, is that we model the current cap table with transactions. This is inspired by the blockchain, where the current state is derived by applying a set of transactions to a given genesis block."
+coverImage: notary/stamp.jpg
 ---
 
 At Ledgy we’re building a new way of managing the cap table and equity of private companies in the cloud. What differentiates our approach from others, is that we model the current cap table with transactions. This is inspired by the blockchain, where the current state is derived by applying a set of transactions to a given genesis block.
