--- a/src/markdown/blog/pre-and-post-money-option-pools.mdx
+++ b/src/markdown/blog/pre-and-post-money-option-pools.mdx
@@ -2,9 +2,9 @@
 date: "2019-02-25"
 title: "The basics of pre- and post-money option pools"
 description: "If you’ve never understood what’s a pre- and post-money option pool (aka. the option pool shuffle), here’s your chance."
-coverImage: pre-and-post-money-option-pools.png
+coverImage: pre-and-post-money-option-pools/pool.jpg
 images:
-  - pre-and-post-money-option-pools.png
+  - pre-and-post-money-option-pools/spreadsheet.png
 ---
 
 If you’ve never understood what’s a pre- and post-money option pool (aka. the option pool shuffle) here’s your chance. Get a piece of paper and a pencil, write down the formulas and don’t give up until the end of this post!
