--- a/src/markdown/blog/pre-and-post-money-option-pools.mdx
+++ b/src/markdown/blog/pre-and-post-money-option-pools.mdx
@@ -13,7 +13,7 @@ If you’ve never understood what’s a pre- and post-money option pool (aka. th
 
 Sheryl and Elon are two good friends who decided to co-found a company called SpaceBook (the social network for aspiring communities on Mars). Their initial cap table looks as below, with the total number of shares being 1 million:
 
-<Img src="pre-and-post-money-option-pools.png" align="right" />
+<Img src="spreadsheet.png" align="right" />
 
 Now, they want to raise a seed round. They manage to get a deal with an investor, Peter:
 
