incorporate Yokos PR

--- a/src/markdown/blog/pre-and-post-money-option-pools.mdx
+++ b/src/markdown/blog/pre-and-post-money-option-pools.mdx
@@ -79,4 +79,4 @@ By now, you should see that we have a “problem”: The number of shares in the
 
 As stated above, the post-money is friendlier for the founders. But if your investors insist on a pre-money pool, you can also, for example, negotiate the company’s valuation to be higher in order to reach a win-win situation.
 
-Please reach out if anything’s unclear. By the way, on Ledgy, you don’t need to care about these formulas, because they are done for you in the background.
+Please reach out if anything’s unclear.
