add about author section to blog posts

--- a/src/markdown/blog/blockchain-notary.mdx
+++ b/src/markdown/blog/blockchain-notary.mdx
@@ -1,5 +1,6 @@
 ---
 date: "2018-09-18"
+author: "timo"
 title: "The Ledgy Blockchain Notary"
 description: "At Ledgy.com we’re building a new way of managing the cap table and equity of private companies in the cloud. What differentiates our approach from others, is that we model the current cap table with transactions. This is inspired by the blockchain, where the current state is derived by applying a set of transactions to a given genesis block."
 coverImage: notary/stamp.jpg
@@ -41,7 +42,7 @@ As explained above, we don’t stamp the file directly. Instead, we stamp the ce
 
 The stamps need to referenced by a Bitcoin transaction. Thus, attestation can take [more than 60 minutes](https://blockchain.info/charts/avg-confirmation-time).
 
-> Learn more about [how to verify documents yourself](/blog/verifying-documents-from-ledgy-on-the-blockchain/).
+> Learn more about [how to verify documents yourself](/blog/verifying-documents-on-the-blockchain/).
 
 ### Implementation
 
