--- a/src/markdown/blog/pre-and-post-money-option-pools.mdx
+++ b/src/markdown/blog/pre-and-post-money-option-pools.mdx
@@ -1,5 +1,6 @@
 ---
 date: "2019-02-25"
+author: "yoko"
 title: "The basics of pre- and post-money option pools"
 description: "If you’ve never understood what’s a pre- and post-money option pool (aka. the option pool shuffle), here’s your chance."
 coverImage: pre-and-post-money-option-pools/pool.jpg
