--- a/src/markdown/blog/verifying-documents-on-the-blockchain.mdx
+++ b/src/markdown/blog/verifying-documents-on-the-blockchain.mdx
@@ -1,5 +1,6 @@
 ---
 date: "2018-09-24"
+author: "timo"
 title: "Verifying documents on the Bitcoin blockchain"
 description: "Since the introduction of our blockchain notary, every document uploaded to our platform is certified and stamped on the Bitcoin blockchain."
 coverImage: notary/verification.jpg
