--- a/src/markdown/blog/numbered-shares.mdx
+++ b/src/markdown/blog/numbered-shares.mdx
@@ -1,5 +1,6 @@
 ---
 date: "2018-01-30"
+author: "ben"
 title: "Are numbered shares necessary?"
 description: "Our daily business is cap tables and share registers. One topic we regularly see divide the minds in Switzerland: Is it necessary to number the shares? Let’s try to bring some light into this darkness."
 coverImage: numbered-shares/numbers.jpg
