--- a/src/markdown/press-release/share-dispenser.mdx
+++ b/src/markdown/press-release/share-dispenser.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Bridging the Gap—Von Blockchain-Tokens zu echten Gesellschaftsanteilen"
-description: "Am Mittwoch gab es in der Schweiz große Neuigkeiten: Die Equility AG, auch bekannt unter dem Namen Alethena, hat ihre eigenen Firmenanteile öffentlich über die Blockchain zum Verkauf angeboten. Das Besondere an diesem Ansatz ist, dass keinerlei persönliche Verifizierung (KYC) notwendig ist, um Tokens kaufen zu können."
+description: "Letzten Mittwoch gab es in der Schweiz große Neuigkeiten: Die Equility AG, auch bekannt unter dem Namen Alethena, hat ihre eigenen Firmenanteile öffentlich über die Blockchain zum Verkauf angeboten. Das Besondere an diesem Ansatz ist, dass keinerlei persönliche Verifizierung (KYC) notwendig ist, um Tokens kaufen zu können."
 images:
   - share-dispenser/dispenser.jpeg
   - ../timo.jpg
@@ -9,9 +9,9 @@ images:
   - lexr-icon.png
 ---
 
-Zürich, 8. März 2019
+Zürich, 11. März 2019
 
-**Am Mittwoch gab es in der Schweiz große Neuigkeiten: Die Equility AG, besser bekannt unter dem Namen Alethena, hat ihre eigenen Firmenanteile öffentlich über die Blockchain zum Verkauf angeboten. Das Besondere an diesem Ansatz ist, dass keinerlei persönliche Verifizierung (KYC) notwendig ist, um Tokens kaufen zu können.**
+**Letzten Mittwoch gab es in der Schweiz große Neuigkeiten: Die Equility AG, besser bekannt unter dem Namen Alethena, hat ihre eigenen Firmenanteile öffentlich über die Blockchain zum Verkauf angeboten. Das Besondere an diesem Ansatz ist, dass keinerlei persönliche Verifizierung (KYC) notwendig ist, um Tokens kaufen zu können.**
 
 Ursprünglich startete das Unternehmen mit einer Service für ICO-Ratings. Als neues Feld kommt nun die Tokenisierung von Unternehmensanteilen hinzu. Der Launch des [Aktienautomates](https://aktienautomat.ch) von Equility ist jedoch Weltpremiere. Interessierte besuchen dazu lediglich die Webseite des Aktienautomates und können über einen Ethereum-fähigen Browser direkt Tokens der Equility AG erwerben. Ermöglicht wird dies durch ein einfaches Konzept: Die Token sind Wertrechte und von den Gesellschaftsrechten der Anteile entkoppelt. Wer den Token besitzt, ist noch nicht automatisch Aktionär der Equility AG.
 
