unify title capitalization

--- a/src/markdown/blog/convertible-loans.mdx
+++ b/src/markdown/blog/convertible-loans.mdx
@@ -1,7 +1,7 @@
 ---
 date: "2017-12-04"
 author: "ben"
-title: "Calculating a financing round with convertible loans"
+title: "Calculating a Financing Round with Convertible Loans"
 description: "Investment rounds can get tricky to calculate when convertible rounds with cap and discount come into play. So let’s have a look at how that works."
 coverImage: convertible-loans/coins.jpg
 images:
