--- a/src/markdown/blog/esop-ch.mdx
+++ b/src/markdown/blog/esop-ch.mdx
@@ -1,7 +1,7 @@
 ---
 date: "2019-03-19"
 author: "yoko"
-title: "Equity for employees in Switzerland"
+title: "Equity for Employees in Switzerland"
 description: "It’s a counterintuitive fact when a company is small but believe it or not: equity is the most precious asset a startup has. If explained and used well, it can play a key role in motivating your employees to stay on the boat for the long run."
 coverImage: esop-ch/esop-ch-cover.jpg
 images:
