--- a/src/markdown/blog/verifying-documents-on-the-blockchain.mdx
+++ b/src/markdown/blog/verifying-documents-on-the-blockchain.mdx
@@ -1,7 +1,7 @@
 ---
 date: "2018-09-24"
 author: "timo"
-title: "Verifying documents on the Bitcoin blockchain"
+title: "Verifying Documents on the Bitcoin Blockchain"
 description: "Since the introduction of our blockchain notary, every document uploaded to our platform is certified and stamped on the Bitcoin blockchain."
 coverImage: notary/verification.jpg
 images:
