some content corrections

--- a/src/markdown/blog/esop-ch.mdx
+++ b/src/markdown/blog/esop-ch.mdx
@@ -19,7 +19,7 @@ In Switzerland, there are two main ways to set up an employee participation plan
 A stock option is a right for the employee to buy a stock at an agreed price (strike price) on a future date (exercise date).
 
 ##### Tax
-No tax applies until the option gets exercised. Upon exercise, an income tax (typically 10–20%) applies on the difference between the stock's market value and the strike price (see appendix below to find out how to determine these values). The graph below shows how much, at the end of the day, the employee receives for her options. The nice thing you can note here, is that if  you own stock, you will benefit of the Tax-free capital gain (specific to Switzerland) in the event that you sell your stock. Indeed, as stated above, the income tax only applies at the time of exercise and a sale of the company will result in a tax-free capital gain for everyone owning stock.
+No tax applies until the option gets exercised. Upon exercise, an income tax (typically 10–20%) applies on the difference between the stock's market value and the strike price (see *Good to know* below to find out how to determine these values). The graph below shows how much, at the end of the day, the employee receives for her options. The nice thing you can note here, is that if  you own stock, you will benefit of the Tax-free capital gain (specific to Switzerland) in the event that you sell your stock. Indeed, as stated above, the income tax only applies at the time of exercise and a sale of the company will result in a tax-free capital gain for everyone owning stock.
 
 <Img src="options.png" caption="Legal text governing share registers in Switzerland" />
 
@@ -48,7 +48,7 @@ If you're still unsure about what to choose, you're not alone and in the end it'
 #### Good to know
 
 ##### How are strike price and market value determined?
-The ***strike price*** is determined in a fairly arbitrary manner such as based on the most recent financing round, nominal value or fair market value. Try to make the strike price as low as you can, to maximize your employees' gain. The ***market value*** is determined by a fair market value that needs to be approved by the cantonal tax office (*Formelwert* or *Steuer-Ruling*).
+The ***strike price*** is determined in a fairly arbitrary manner such as based on the most recent financing round, nominal value or fair market value. Try to make the strike price as low as you can, to maximize your employees' gain. The ***market value*** is determined by a fair market value that needs to be calculated according to the tax office guidelines (*Formelwert* or even do a *Steuer-Ruling*).
 
 ##### A frequent argument in favour of phantom options
 A "problem" that occurs with stock options is that you need to pay an income tax when you convert the options to stock. In this process you actually do not receive any money (but only stock) and at the same time you need to pay the tax. This can sometimes be problematic if the employees can't afford to pay the tax because they have a low salary. Phantom options, on the other hand, offer the advantage that the employee has to pay the tax only when he actually receives money (when the phantom option gets converted). However nowadays, startups tend to pay their employees a high enough salary so that paying the tax when exercising your options is not so problematic anymore.
