--- a/src/markdown/gdpr-dpa.mdx
+++ b/src/markdown/gdpr-dpa.mdx
@@ -56,7 +56,7 @@ Ledgy AG, a company incorporated under the laws of Switzerland, having its regis
     3. that it has notified data subjects of any applicable period for which Customer Personal Data or any element of Customer Personal Data will be stored by Ledgy;
     4. that the Customer has the right to provide Customer Personal Data to Ledgy and has provided Data Subjects with all necessary information and data protection notices on or in connection with the collection of such Customer Personal Data from data subjects including, but not limited to, the supply of Customer Personal Data to Ledgy and details of the purposes for which such Customer Personal Data will be processed by Ledgy including, if applicable, as set out in Ledgy’s retention policy;
     5.  The Customer warrants and represents:
-        1. that the Customer will not provide Ledgy with nor request Ledgy to process the types and categories of Personal Data listed, defined, or referenced to in Articles 8 - 10 of the GDPR or respective definitions in the Swiss Data Privacy Law (collectively **“High Risk Personal Data”**), and
+        1. that the Customer will not provide Ledgy with nor request Ledgy to process the types and categories of Personal Data listed, defined, or referenced to in Articles 8–10 of the GDPR or respective definitions in the Swiss Data Privacy Law (collectively **“High Risk Personal Data”**), and
         2. that the Customer will not provide Ledgy with nor pass to Ledgy personal data for which Ledgy has no knowledge of, is unaware of, or which is not explicitly provided for under this Data Protection Addendum, and that where applicable, the Customer will not enter any personal data into free text fields embedded in relevant Ledgy products and/or Services and will not incorporate any personal data outside of the scope of Personal Data as contemplated in the Services Agreement and this Addendum into any attachments that are to be uploaded into Ledgy’s Application;
     6. that the Customer shall, and shall procure its employees, contractors, and/or agents to keep the login credentials used to access to the Services secure and shall be liable for the access to the Services through such login credentials. The Customer further warrants that it shall promptly notify Ledgy of any unauthorised use of any login credentials, or other breach of security, including loss, theft or unauthorised disclosure of login credentials.
 7. The Customer acknowledges that Ledgy is reliant on the Customer for instructions as to the extent to which Ledgy is entitled to use and process the Customer Personal Data. Consequently, Ledgy will not be liable for and the Customer shall, immediately on demand, fully indemnify Ledgy and keep Ledgy effectively indemnified against all costs, claims, demands, expenses (including legal costs and disbursements on a full indemnity basis), losses (including indirect losses, loss or corruption of data, loss of reputation, goodwill and profits), actions, proceedings and liabilities of whatsoever nature incurred by Ledgy or for which Ledgy may become liable due to any claim brought by a data subject or Supervisory Authority arising from any action or omission by Ledgy, to the extent that such action or omission resulted from the Customer’s instructions.
