--- a/src/markdown/gdpr-dpa.mdx
+++ b/src/markdown/gdpr-dpa.mdx
@@ -1,7 +1,7 @@
 ---
 date: "2019-03-26"
 title: "GDPR Data Processing Addendum (“DPA”)"
-description: "Investment rounds can get tricky to calculate when convertible rounds with cap and discount come into play. So let’s have a look at how that works."
+description: "Data Processing Addendum for GDRP compliance at Ledgy"
 ---
 
 Ledgy AG, a company incorporated under the laws of Switzerland, having its registered office and principal place of business on Forchstrasse 60, 8008 Zurich, Switzerland, as registered with the Commercial Register of the Canton of Zurich under number CHE-261.454.963 (**“Ledgy”**, the **“Data Processor”** or the **“Processor”**), and the customer (the **“Customer”** or the **“Controller”**), hereby agree as follows:
