--- a/src/markdown/terms.mdx
+++ b/src/markdown/terms.mdx
@@ -11,6 +11,7 @@ These Terms take effect when you confirm your consent to these Terms electronica
 ### The Services
 
 We offer free and purchased Services to you based on the detailed description on the Website and/or specific terms set out in the Order Confirmation, all of which are subject to these Terms.
+
 <dl>
   <dt>Free Trial Services</dt>
   <dd>
@@ -49,8 +50,10 @@ We offer free and purchased Services to you based on the detailed description on
 
 ### Intellectual Property Rights and Data Ownership
 
-###### Your Data
+#### Your Data
+
 Data imported into the Application by you or by External Users on your behalf.
+
 <dl>
   <dt>Ownership</dt>
   <dd>
@@ -68,24 +71,30 @@ Data imported into the Application by you or by External Users on your behalf.
   In case of a partial service discontinuation blocking the export function, or in case your account is inaccessible, you can request us to assist with delivering an export of your Data, which we will complete within 30 days after being given notice, unless circumstances outside Ledgy’s control make such an export impossible
 
   Ledgy uses your Data exclusively for the provision of the Services. Ledgy may conduct anonymized data analytics based on your Data, e.g., to generate anonymized statistics.
+
   </dd>
 </dl>
 
-###### Intellectual property rights in the Services, the Website and the App
+##### Intellectual property rights in the Services, the Website and the App
+
 <dl>
   <dt>Ownership</dt>
   <dd>
+
   All intellectual property rights belong to Ledgy and/or Ledgy’s subcontractors, business partners, licensors, affiliates, and third-party providers (collectively, the **“Subcontractors”**).
+
   </dd>
   <dt>Related right</dt>
   <dd>
+
   Ledgy grants you, subject to these Terms, a revocable, non-exclusive, non-sublicensable, non-transferrable license to access and use the Services in accordance with these Terms. Except for the right to access and use, you obtain no rights under these Terms from Ledgy or the Subcontractors.
+
   </dd>
 </dl>
 
 ### Service Level
 
-##### ≥99.9% application uptime
+#### ≥99.9% application uptime
 
 Ledgy will use reasonable efforts and take commercially reasonable measures to ensure a satisfactory availability of the Application, including a reasonably error-free, timely, and reliable Services experience.
 
@@ -116,23 +125,23 @@ By using the Services, you agree that:
 
 ### Duration and Termination
 
-##### Duration and Renewal
+#### Duration and Renewal
 
 This Agreement will commence on the Effective Date and will remain in effect until terminated pursuant to the clauses in this Section. The Order Confirmation will indicate the Effective Date as well as the duration. Unless agreed otherwise, the subscribed Services automatically renew after the duration for additional renewal periods as per the Order Confirmation. Either Party can cancel the subscribed services by giving 30 days prior notice towards the end of a term.
 
-##### Termination
+#### Termination
 
 In addition to the above right to termination, you may terminate your Agreement with immediate effect in case the reason for the termination is your express disagreement to our material alteration of these Terms or the Services and termination notice is within the change assessment period defined in Section 8.
 
 Ledgy may also, at its sole discretion and at any time, suspend or discontinue your use of the Services without prior notice, and without any liabilities of any kind, in case Ledgy reasonably suspects or determines that your use of the Services in any way that materially violates this Agreement, is fraudulent, or if needed to comply with the law or requests from public authorities. Ledgy may, at its sole discretion and at any time, and without any liabilities of any kind, suspend or discontinue your use of the Services with 10 days’ prior notice, in case Ledgy suspects or determines that your use of the Services poses a security risk, could impact the operations of our systems or delivery of the Services, could subject Ledgy or a third party to a substantial liability, or if you become the subject of bankruptcy, dissolution, liquidation, or similar; in such cases, Ledgy shall provide a reasonably detailed motivation for the suspension or discontinuation. In case of suspension, you remain liable for all fees and charges incurred during the suspension period.
 
-##### After Termination
+#### After Termination
 
 Upon the termination, you remain responsible for all fees and charges you have incurred until the termination date. We will not take action to remove, block, anonymize, reduce availability of, or in any way alter any of your Data until 90 days after the termination date and you may request to export your Data. Thereafter, we may delete your Data. If you use the Services after the termination date, the terms of this Agreement will still apply in that period, and you will pay the applicable fees and charges for the usage of the Services in this period.
 
 ### Changes to the Terms and Services
 
-##### Changes to these Terms
+#### Changes to these Terms
 <dl>
   <dt>Non-material</dt>
   <dd>
@@ -152,10 +161,11 @@ Upon the termination, you remain responsible for all fees and charges you have i
   *Notification:* Directly, at least 30 days ahead, except where impossible.
 
   *Termination right:* Termination right with immediate effect (pursuant to the termination conditions set out in Section 7) within 30 days upon notice (the **“Change Assessment Period”**). This termination right is your sole and exclusive remedy if you object to any change in these Terms. Your continued use of the Services after the expiration of the Change Assessment Period will constitute acceptance of these Terms, as amended.
+
   </dd>
 </dl>
 
-##### Changes to the Services
+#### Changes to the Services
 
 <dl>
   <dt>Non-material</dt>
@@ -246,9 +256,6 @@ Neither Party can be held liable for situations (delays, failure to perform any 
     <td>Message to the email address associated with your customer account</td>
   </tr>
 </table>
-
-
-
 
 It is your responsibility to keep your email address associated to your account current. You will be deemed as having received any email sent to the email address then associated with your account when we send the email, regardless of whether you actually receive the email.
 
